stylesheets/all.css
/* ... */
/* line 155, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
.visible-print-block { display: none !important; }
@media print { /* line 155, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
  .visible-print-block { display: block !important; } }

/* line 162, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
.visible-print-inline { display: none !important; }
@media print { /* line 162, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
  .visible-print-inline { display: inline !important; } }

/* line 169, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
.visible-print-inline-block { display: none !important; }
@media print { /* line 169, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/_responsive-utilities.scss */
  .visible-print-inline-block { display: inline-block !important; } }

@media print { /* line 18, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/bootstrap/bootstrap/mixins/_responsive-visibility.scss */
  .hidden-print { display: none !important; } }
/* line 1, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
body { background-color: #3C4512; }

/* line 4, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header { padding: 38px 0; }
@media screen and (max-width: 480px) { /* line 4, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header { padding: 19px 0; } }

/* line 8, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-band { margin-top: 0; margin-bottom: 0; margin-left: 25px; }
@media screen and (max-width: 480px) { /* line 8, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-band { margin-left: 10px; }
  /* line 14, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-band > img { height: 40px; } }

/* line 17, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.wrap { background-color: white; }

/* line 20, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-menu { font-size: 1.25em; list-style: none; margin-bottom: 0; }
@media screen and (max-width: 736px) { /* line 20, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu { padding-left: 0; margin-top: 19px; opacity: 0; width: 60vw; webkit-transition: 0.2s; -o-transition: 0.2s; transition: 0.2s; }
  /* line 31, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu.active { opacity: 1; } }
/* line 33, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-menu .menu-item { position: relative; display: inline-block; padding: 19px 24px; height: 55px; text-align: center; }
@media screen and (max-width: 736px) { /* line 33, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu .menu-item { display: block; text-align: left; border-bottom: 1px dotted #B0C936; height: auto; } }
/* line 44, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-menu .menu-item > a { color: #91A62A; text-decoration: none; }
@media screen and (max-width: 736px) { /* line 44, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu .menu-item > a { color: white; } }
/* line 49, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-menu .menu-item:before { content: ""; position: absolute; display: inline-block; background-color: transparent; height: 3px; bottom: 0; width: 0%; left: 50%; webkit-transition: 0.3s; -o-transition: 0.3s; transition: 0.3s; }
@media screen and (max-width: 736px) { /* line 49, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu .menu-item:before { display: none; } }
/* line 62, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.header-menu .menu-item:hover:before, .header-menu .menu-item.active:before { width: 30%; left: 35%; background-color: #E87F07; }
@media screen and (max-width: 736px) { /* line 67, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu .menu-item.active:after { content: ""; position: absolute; display: inline-block; background-color: #E87F07; height: 100%; top: 0; width: 4px; left: 0; }
  /* line 76, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
  .header-menu .menu-item:first-child:after { display: none; } }

/* line 79, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.mob-menu { float: right; margin: 19px 28.5px 0; background-color: #B0C936; height: 2px; width: 19px; position: relative; }
/* line 86, /Users/ilandy/Documents/infbeyondfile/LionWeb/ForestMiddleMan/source/stylesheets/base/_default.sass */
.mob-menu:after, .mob-menu:before { content: ""; height: 2px; width: 19px; position: absolute; background-color: #B0C936; display: inline-block; left: 0; }
/* ... */

